--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,16 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10, <4.0"
+python = ">=3.10, <3.13"
 pydantic = "^2.4.2"
 shapely = "^2.0.1"
 geopandas = "^0.14.0"
 googlemaps = "^4.10.0"
 azure-maps-search = "^1.0.0b2"
 joblib = "^1.3.2"
+rapidfuzz = "^3.4.0"
+numpy = "^1.26.0"
+pandas = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 autoflake = "*"
@@ -57,6 +60,7 @@ pytest-cov = "*"
 python-kacl = "*"
 pyupgrade = "*"
 tryceratops = "*"
+pandas-stubs = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -92,7 +96,7 @@ no_implicit_optional = true
 strict_equality = true
 warn_unused_ignores = true
 warn_redundant_casts = true
-warn_return_any = true
+warn_return_any = false
 check_untyped_defs = true
 show_error_codes = true
 
