--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ joblib = "^1.3.2"
 rapidfuzz = "^3.4.0"
 numpy = "^1.26.0"
 pandas = "^2.1.1"
+pandera = "^0.17.2"
 
 [tool.poetry.dev-dependencies]
 autoflake = "*"
@@ -103,6 +104,7 @@ show_error_codes = true
 [[tool.mypy.overrides]]
 module = [
     "shapely",
+    "geopandas",
     "googlemaps",
     "joblib",
     "azure.maps.search",
