--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,10 @@ joblib = "^1.3.2"
 rapidfuzz = "^3.4.0"
 numpy = "^1.26.0"
 pandas = "^2.1.1"
-pandera = "^0.17.2"
+pandera = {extras = ["geopandas"], version = "^0.17.2"}
 tqdm = "^4.66.1"
 geopy = "^2.4.0"
+loguru = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 autoflake = "*"
@@ -106,7 +107,7 @@ show_error_codes = true
 
 [[tool.mypy.overrides]]
 module = [
-    "shapely",
+    "shapely.*",
     "geopandas",
     "googlemaps",
     "joblib",
